static/forum.css
/* ... */
.tags-button:hover {
    border: 2px solid #66BB69;
    transition: 0.2s ease;
    transform: translateY(-5px);
}

#tags-button-container {
    display: flex; 
    justify-content: flex;
    margin-bottom: 10px;
    float: left;
}

#postTitle {
    color: #2d532e;
}

#comments-header {
    color: #529954;
}

#list-of-comments {
    list-style-type: none;
}

.nameAndTagHeader {
    display: flex;
    justify-content: space-between;
}

.tag-display {
    color: #66BB69;
    margin-top: -10px;
    margin-bottom: 15px;
}

#delete-comment-button {
    margin-top: -10px;
    margin-right: 10px;
    padding: 8px 12px;
    border: 3px solid rgb(195, 195, 195);
    border-radius: 20px;
    cursor: pointer;
    background-color: #66BB69;
    color: white;
    transition: 0.2s ease;
    margin-right: -10px;
}

#delete-comment-button:hover {
    border: 3px solid #66BB69;
    background-color: white;
    color: #66BB69;
    transition: 0.2s ease;
}

.commentDiv {
    display: flex;
    justify-content: space-between;
    margin: 20px;
}

#comment {
    color: #336134;
}

.lower-row-buttons-container {
    display: flex;
    justify-content: space-between;
}

#edit-button {
    display: inline-block;
    margin-right: 10px;
    padding: 8px 12px;
    border: 3px solid rgb(195, 195, 195);
    border-radius: 20px;
    cursor: pointer;
    background-color: #66BB69;
    color: white;
    transition: 0.2s ease;
    height: 50%;
    margin-top: 20px;
}

#edit-button:hover {
    border: 3px solid #66BB69;
    background-color: white;
    color: #66BB69;
    transition: 0.2s ease;
}

#edit-post-title, #edit-post-description, #itinerary-title, #itinerary-description, #itinerary-post-title, #itinerary-post-description, #report-reason {
    border: 2px solid #427b44;
    margin-bottom: 15px;
    border-radius: 10px;
    padding: 10px;
}

#itinerary-title, #itinerary-description {
    border: 2px solid rgb(179, 179, 179);
    margin-bottom: 15px;
    border-radius: 10px;
    padding: 10px;
}

#recent-itineraries-container {
    display: flex;
    justify-content: center;
    margin: 0;
    z-index: 1;
}

.sidebar {
    margin-top: 105px;
    margin-left: 20px;
    width: 30%;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
    border-radius: 15px;
    height: 30%;
    background-color: white;
}

.filter-posts-header, .recent-itineraries-header {
    font-size: 20px;
    font-weight: bold;
    text-align: center;
    margin-top:20px;
    margin-bottom: 0;
    color: #427b44;
}

.generated-itineraries-header {
    font-size: 20px;
    font-weight: bold;
    text-align: center;
    margin-bottom: 0;
    color: #427b44;
}

#no-posts-header {
    text-align: center;
    color: #427b44;
}

#findingDuck {
    display: block;
    margin: 0 auto;
    text-align: center;
    margin-bottom: 30px;
}

.no-posts-here-container {
    margin-top: 80px;
}

.user-post {
    border: 3px solid #66bb69; 
    border-radius: 15px; 
    padding: 10px; 
}

.generated-itineraries-title {
    text-align: center;
    color: #427b44;
}

.generated-itineraries-description {
    color: #66bb69;
    text-align: center;
}

.generated-itineraries-container{
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
    padding: 20px;
    width: 65%;
    border: 3px solid #66bb69;
    background-color: white;
}

.generated-itineraries {
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
    padding: 20px;
    margin-top: 10px;
    transition: transform 0.2s ease-in-out;
}

.generated-itineraries:hover {
    background-color: whitesmoke;
    transform: translateX(5px);
    transition: 0.2s ease;
}

#create-a-post-popup-with-itinerary {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
}

.itineraryDiv {
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
    border: 2px solid #66bb69;
    padding: 10px 20px 10px 20px;
    margin-bottom: 15px;
}

#itinerary-header, #itinerary-info {
    color: #427b44;
}

#comment {
    list-style-type: none;
}

.toggle {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    width: 62px;
    height: 32px;
    display: inline-block;
    position: relative;
    border-radius: 50px;
    overflow: hidden;
    outline: none;
    border: none;
    cursor: pointer;
    background-color: #707070;
    transition: background-color ease 0.3s;
  }
  
  .toggle:before {
    content: "on off";
    display: block;
    position: absolute;
    z-index: 2;
    width: 28px;
    height: 28px;
    background: #fff;
    left: 2px;
    top: 2px;
    border-radius: 50%;
    font: 10px/28px Helvetica;
    text-transform: uppercase;
    font-weight: bold;
    text-indent: -22px;
    word-spacing: 37px;
    color: #fff;
    text-shadow: -1px -1px rgba(0,0,0,0.15);
    white-space: nowrap;
    box-shadow: 0 1px 2px rgba(0,0,0,0.2);
    transition: all cubic-bezier(0.3, 1.5, 0.7, 1) 0.3s;
  }
  
  .toggle:checked {
    background-color: #4CD964;
  }
  
  .toggle:checked:before {
    left: 32px;
  }

  .dark-mode-toggle {
    position: absolute;
    display: flex;
    align-items: center;
}

  .top-right {
    top: 70px; 
    right: 10px; 
}

.dark-mode-text {
    margin-right: 5px; 
}

.dark-mode {
    background-color: #323437;
    color: white;
    transition: 0.2s ease;
}

.dark-mode .create-a-post-button {
    background-color: #DBB941; 
    transition: 0.2s ease;
}

.dark-mode .filter-buttons {
    background-color: #DBB941; 
    color: #323437;
    transition: 0.2s ease;
}

.dark-mode #no-posts-header { 
    color: #DBB941;
    transition: 0.2s ease;
}

.dark-mode .generated-itineraries-container {
    border: 3px solid #DBB941;
}

.dark-mode #individual-posts {
    box-shadow: 8px 8px 12px #DBB941;
}

.dark-mode .header, .dark-mode .text {
    color: #323437;
}
/* ... */

